--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<h1>sunnyrain</h1>
-<p>placeholder</p>
-
+    <div class="container">
+        <h1 class="header">sunnyrain</h1>
+        <p>This is a simple website hosted on GitHub Pages.</p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
