--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 <body>
-
-<h1>sunnyrain</h1>
-<p>placeholder</p>
-
+    <div class="container">
+        <h1 class="header">sunnyrain</h1>
+        <p>This is a simple website hosted on GitHub Pages.</p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
