--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1 class="header">sunnyrain</h1>
         <p>This is a simple website hosted on GitHub Pages.</p>
     </div>
-    <script src="script.js"></script>
+    <div class="top_bar">
+        <p3>test</p3>
+    </div>
 </body>
 </html>
