--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 class="header">sunnyrain</h1>
         <p>This is a simple website hosted on GitHub Pages.</p>
     </div>
-    <div class="top_bar">
+    <div class="header">
         <p3>test</p3>
     </div>
 </body>
