--- a/index.html
+++ b/index.html
@@ -3,74 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 <body>
     <div class="container">
-        <header class="header">
-            <h1>a</h1>
-            <div class="welcome-section">
-                <div class="avatar">
-                    <img src="avatar.png" alt="Avatar">
-                    <div class="avatar-stats">
-                        +0.04 / -0.58
-                    </div>
-                </div>
-                <div class="welcome-text">
-                    <h2>a</h2>
-                    <p>Ta</p>
-                    <ul class="quick-facts">
-                        <li>I’m from Ukraine (and yes, I still live here).</li>
-                        <li>My main programming language is JavaScript.</li>
-                        <li>I love Moon and clouds.</li>
-                        <li>I hate the Sun.</li>
-                        <li>I’m an admin of a cool website called OurWorldOfPixels.com.</li>
-                        <li>I spend almost all my time at home chatting in my Discord server and doing random things on my computer.</li>
-                        <li>I’m a home-student in some random Ukrainian CS university.</li>
-                        <li>I code websites, scrapers, bots and scripts. You can also order things from me (use email).</li>
-                    </ul>
-                </div>
-            </div>
-        </header>
-        <nav class="sidebar">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Photo Album</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Neocities page</a></li>
-                <li><a href="#">Discord</a></li>
-                <li><a href="#">Guestbook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Tumblr</a></li>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">Last.fm</a></li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="#">Mood tracker</a></li>
-                <li><a href="#">Grillby’s</a></li>
-                <li><a href="#">NavLink Ads</a></li>
-                <li><a href="#">OC Gallery</a></li>
-                <li><a href="#">E-mail</a></li>
-            </ul>
-        </nav>
-        <main class="content">
-            <section class="blog">
-                <h2>BLOG</h2>
-                <ul>
-                    <li><a href="#">Optimizing rendering of 100,000+ HTML nodes — Thursday, April 4th 2024</a></li>
-                    <li><a href="#">Custom profile CSS in OldTwitter — Sunday, 30th July, 2023</a></li>
-                    <li><a href="#">Making Tetris in Twitter with Node.js — Tuesday, 17th of August 2021</a></li>
-                    <li><a href="#">The Migration 2 — Wednesday, 26th of August 2020</a></li>
-                    <li><a href="#">The Utix website — Sunday, 23th of February 2020</a></li>
-                    <li><a href="#">brainfuck.js — Sunday, 12th of January 2020</a></li>
-                    <li><a href="#">The Migration — Friday, 16th of August 2019</a></li>
-                    <li><a href="#">The Puzzle 3 and stuff — Tuesday, 6th of August 2019</a></li>
-                    <li><a href="#">Multi Line Task∞: Hello World — Saturday, 25th of May 2019</a></li>
-                    <li><a href="#">ch8tris — my first emulator — Saturday, 25th of May 2019</a></li>
-                </ul>
-            </section>
-        </main>
+        <h1 class="header">sunnyrain</h1>
+        <p>This is a simple website hosted on GitHub Pages.</p>
     </div>
+    
 </body>
 </html>
